# My-Own-Phoenix

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  knip.json  next.config.ts  package-lock.json  package.json  prisma.config.ts  server.ts  tsconfig.json
.claude/: settings.json
app/: assistant.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
components/: add-to-dataset-modal.tsx  agent-config-modal.tsx  agent-model-selector.tsx  agent-selector.tsx  agent-templates-modal.tsx  annotation-badge.tsx  csv-import-modal.tsx  eval-selector-modal.tsx  join-project-modal.tsx  model-selector.tsx  nav.tsx  project-card.tsx  project-guard.tsx  project-selector.tsx  project-sidebar.tsx  prompt-builder.tsx  provider-icon.tsx  rule-builder.tsx  span-graph.tsx  span-tree-view.tsx  trace-detail-tabs.tsx
connector/: README.md  pyproject.toml
connector/src/phoenix_connector/: __init__.py  cli.py  client.py  forwarder.py
eval-worker/: prompts.py  requirements.txt  worker.py
lib/: api-client.ts  api-error.ts  api-helpers.ts  auth-project.ts  auth-server.ts  chatApi.ts  constants.ts  crypto.ts  dashboard-migration.ts  dashboard-utils.ts  dataset-utils.ts  date-utils.ts  eval-defaults.ts  eval-language.ts  eval-seed.ts  hooks.ts  llm-providers.ts  logger.ts  model-registry.ts  openapi-spec.ts  otlp-proto.ts  phoenix-db.ts  phoenix-server.ts  phoenix.ts  pii-guard.ts  prisma.ts  project-context.tsx  project-prompt-seed.ts  rate-limit.ts  rmf-utils.ts  span-extraction.ts  sse-broadcast.ts  utils.ts  (+1 more)
(+344 files in other folders)
