[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phoenix-connector"
version = "0.1.1"
description = "Connect local agents to My Own Phoenix SaaS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "websockets>=12.0",
  "httpx>=0.27",
  "click>=8.0",
]

[project.scripts]
phoenix-connector = "phoenix_connector.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/phoenix_connector"]
